# rust-grpc

./: Cargo.toml  Dockerfile  fly.toml
.github/workflows/: actions.yml
proto/: echo.proto
src/: main.rs  server.rs
