[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "echo-server"
path = "src/server.rs"

[[bin]]
name = "echo-client"
path = "src/main.rs"